@@ -375,6 +375,7 @@ public class ZkStateReader implements Closeable {
           securityNodeListener.run();
         }
       });
+      securityData = getSecurityProps(true);
     }
   }
 
